# PML

./: .clang-format  .gitignore  AGENTS.md  BEHAVIOR_DIFFERENCES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ERROR_REPORTING_PLAN.md  OPTIMIZATION_PLAN.md  README.en.md  README.md  ROADMAP.md  bash.exe.stackdump  design.md  development.md  dualgrid-session-findings.md  lisp-compat-plan.md  migrate_core.py  migrate_test_evaluator.py  migrate_test_modules.py  migrate_tests.py  migrate_value.py  mossy-gorge-lynx.md  northern-cave-stoat.md  pml-vscode-review.md  pyproject.toml  test_check.pml  test_name.pml  test_perspective.pml  test_simple.pml  test_type_error.pml  tmp_test.pml  tmp_test3d.pml  tough-wood-grouse.md  优化计划.md  提示.md
pml-cpp/: .gitignore  BEHAVIOR_DIFFERENCES.md  CMakeLists.txt  CMakePresets.json  PROJECT_STATUS.md  README.md  vcpkg.json
pml-cpp/src/pml/animation/: CMakeLists.txt  easing.cpp  easing.h  timeline.cpp  timeline.h
pml-cpp/src/pml/api/: CMakeLists.txt  api.cpp
pml-cpp/src/pml/backend/: CMakeLists.txt  color_helpers.cpp  color_helpers.h  registry.cpp  registry.h
pml-cpp/src/pml/cli/: CMakeLists.txt  main.cpp  repl.cpp  repl.h
pml-cpp/src/pml/core/: CMakeLists.txt  embedded_stdlib.h  error.h  types.cpp  types.h
pml-cpp/src/pml/evaluator/: CMakeLists.txt  backend_builtins.h  builtins.cpp  canvas_builtins.cpp  environment.h  evaluator.cpp  evaluator.h  shader_builtins.cpp  shader_builtins.h  transform_builtins.cpp
pml-cpp/src/pml/frontend/: CMakeLists.txt  expander.h  lexer.cpp  lexer.h  parser.cpp  parser.h
pml-cpp/src/pml/graphics/: CMakeLists.txt  canvas.cpp  canvas.h  color.h  graphic_object.h  objects.cpp  objects.h  render.cpp  render.h  transform.cpp  transform.h
pml-cpp/src/pml/mcp/: CMakeLists.txt  mcp_server.h
pml-cpp/src/pml/module/: embedded_stdlib.cpp
pml-cpp/src/pml/skeleton/: CMakeLists.txt  ik_fabrik.cpp  ik_fabrik.h  skeleton.cpp  skeleton.h  skin_binding.cpp  skin_binding.h
pml-cpp/src/pml/sprites/: CMakeLists.txt  palette.h  registry.cpp  registry.h  stub.cpp  style.cpp  style.h  validator.cpp  validator.h
pml-cpp/tests/: CMakeLists.txt  builtins_smoke.cpp  stub.cpp  test_animation.cpp  test_api.cpp  test_helpers.h
pml-cpp/tools/: CMakeLists.txt
src/pml/animation/: CMakeLists.txt  easing.cpp  easing.h  timeline.cpp  timeline.h
src/pml/api/: CMakeLists.txt  api.cpp  api.h  context.cpp  context.h  texture_cache.cpp  texture_cache.h
src/pml/asset/: CMakeLists.txt  asset_builtins.cpp  asset_builtins.h  asset_cache.cpp  asset_cache.h  asset_loader.cpp  asset_loader.h
src/pml/backend/skia/: CMakeLists.txt  skia_backend.cpp  skia_backend_atlas.cpp  skia_backend_atlas.h  skia_backend_draw.cpp  skia_backend_filter.cpp  skia_backend_png.cpp  (+7 more)
src/pml/cli/: CMakeLists.txt  cli_errors.cpp  cli_errors.h  cli_execute.cpp  cli_execute.h  cli_shared.h  cli_watch.cpp  cli_watch.h  main.cpp  repl.cpp  repl.h
src/pml/core/: CMakeLists.txt  arena.h  call_stack.cpp  call_stack.h  embedded_stdlib.h  error.cpp  error.h  kwargs.h  platform.h  source_manager.cpp  source_manager.h  texture.h  texture_cache.cpp  texture_cache.h  types.cpp  types.h
src/pml/evaluator/: CMakeLists.txt  backend_builtins.cpp  builtins.cpp  builtins.h  builtins_arithmetic.cpp  builtins_containers.cpp  builtins_helpers.h  builtins_io.cpp  builtins_list.cpp  builtins_polymorphic.cpp  builtins_polymorphic.h  builtins_predicates.cpp  builtins_string.cpp  builtins_threading.cpp  builtins_threading.h  canvas_builtins.cpp  canvas_builtins.h  clip_builtins.cpp  clip_builtins.h  color_builtins.cpp  color_builtins.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  gradient_builtins.cpp  gradient_builtins.h  macro_expansion.cpp  multi_texture_builtins.cpp  multi_texture_builtins.h  name_builtins.cpp  name_builtins.h  object_style_builtins.cpp  object_style_builtins.h  perturb_builtins.cpp  perturb_builtins.h  render_channels_builtins.cpp  render_channels_builtins.h  shader_builtins.cpp  shader_builtins.h  (+11 more)
src/pml/filter/: CMakeLists.txt  adjustments.cpp  adjustments.h  convolution.cpp  convolution.h  filter_backend.h  filter_builtins.cpp  filter_builtins.h  image_filter.cpp  image_filter.h  layer_style.cpp  layer_style.h
src/pml/graphics/: CMakeLists.txt  canvas.cpp  canvas.h  cg_solver.h  color.cpp  color.h  gradient.h  graphic_object.h  graphics_types.h  name_registry.h  objects.cpp  objects.h  params.cpp  params.h  path_types.cpp  path_types.h  perlin_noise.cpp  perlin_noise.h  polygon_perturb.cpp  polygon_perturb.h  render.cpp  render.h  rough.cpp  rough.h  rough_filler.cpp  rough_filler.h  texture_bake.cpp  texture_bake.h  texture_pipeline.cpp  texture_pipeline.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h  transform.cpp  transform.h  triangulation.cpp  triangulation.h  uv_solver.cpp  uv_solver.h
src/pml/layer/: CMakeLists.txt  aseprite_writer.cpp  aseprite_writer.h  blend_mode.cpp  blend_mode.h  blend_mode_skia.cpp  blend_mode_skia.h  composition.cpp  composition.h  compositor.cpp  compositor.h  layer.cpp  layer.h  layer_builtins.cpp  layer_builtins.h  spritesheet.cpp  spritesheet.h
src/pml/mcp/: CMakeLists.txt  mcp_server.cpp  mcp_server.h
src/pml/sprites/: CMakeLists.txt  palette.cpp  palette.h  registry.cpp  registry.h  style.cpp  style.h  validator.cpp  validator.h
tests/: CMakeLists.txt  _smoke_module.pml  builtins_smoke.cpp  noise_render_test.pml  pml_builtins_smoke.cpp  test_animation.cpp  test_api.cpp  test_asset.cpp  test_bezier_gradients.py  test_blend_modes.py  test_character_animation.py  test_evaluator.cpp  test_evaluator.py  test_filter.cpp  test_for_comp.cpp  test_graphics.cpp  test_graphics_sprites.py  test_helpers.h  test_layer.cpp  test_layer_render.cpp  test_layout.py  test_lexer.cpp  test_lexer.py  test_mcp_server.py  test_modules.cpp  test_parser.cpp  test_parser.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_polygon_perturb.cpp  test_scene.cpp  test_shaders.py  test_skeleton.cpp  test_sketch.py  test_spritesheet.cpp  test_stdlib_macros.cpp  test_texture_pipeline.cpp  (+2 more)
(+452 files in other folders)
