[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pml"
version = "0.1.0"
description = "PML (Picture Markup Language) — A Lisp-style language for sprite asset generation"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pillow>=12.2.0",
]

[project.scripts]
pml = "pml.repl:main"
pml-mcp = "pml.mcp_server:main"

[tool.uv]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
