[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picmarkup"
version = "0.1.0"
description = "PML (Picture Markup Language) — A Lisp-style DSL for code-to-image generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "wvfp"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Interpreters",
]
keywords = ["pml", "image-generation", "dsl", "lisp", "llm", "code-to-image", "graphics"]

[tool.hatch.build.targets.wheel]
packages = ["pml/"]

[tool.hatch.build]
force-include = { "stdlib/" = "stdlib/" }
dependencies = [
    "mcp",
    "pillow>=12.2.0",
]

[project.urls]
Homepage = "https://github.com/wvfp/PML"
Repository = "https://github.com/wvfp/PML"

[project.scripts]
pml = "pml.repl:main"
pml-mcp = "pml.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
